m5l1 (prepare hw) add rest test